--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "symfony/dependency-injection": "~2.8|~3.0",
         "symfony/http-kernel": "~2.8|~3.0",
         "symfony/config": "~2.8|~3.0",
+        "symfony/event-dispatcher": "~2.8|~3.0",
         "symfony/swiftmailer-bundle": "~2.3|~3.0",
 
         "shapecode/swiftmailer-plugins": "~1.0"
